--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
@@ -17,6 +18,8 @@
     "dev": "nodemon listen.js"
   },
   "jest": {
-  "setupFilesAfterEnv": ["jest-sorted"]
-}
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
+  }
 }
